CSS/forecast.css
body {
    font-family: Arial, sans-serif;
    background: linear-gradient(to right, #141e30, #243b55);
    margin: 0;
    padding: 20px;
}

button {
    display: block;
    margin: 0 auto 20px auto;
    padding: 10px 15px;
    border: none;
    background-color: #333;
    color: white;
    border-radius: 8px;
    cursor: pointer;
}

.container {
    max-width: 900px;
    margin: auto;
    text-align: center;
}

h1 {
    font-size: 32px;
    margin-bottom: 10px;
    color: white;
}

h2 {
    text-align: center;
    margin-bottom: 20px;
    color: #56ccf2;
    text-shadow: 0 2px 10px rgba(86, 204, 242, 0.4);
}

#forecast {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
    gap: 15px;
    max-width: 800px;
    margin: auto;
}

#forecast div {
    background: white;
    padding: 15px;
    border-radius: 12px;
    text-align: center;
    box-shadow: 0 4px 12px rgba(0,0,0,0.1);
}

#forecast div:hover {
    transform: translateY(-5px);
}

#forecast p:first-child {
    font-size: 13px;
    color: #666;
}

#forecast p:last-child {
    font-size: 18px;
    font-weight: bold;
    color: #0077ff;
}

.light {
    background: #f5f7fa !important;
    color: #222;
}

.light h1 {
    color: #222;
}
.light h2 {
    color: #0077ff;
    text-shadow: none;
}

.light #forecast div {
    background: #ffffff;
    color: #222;
    box-shadow: 0 4px 12px rgba(0,0,0,0.1);
}

.light #forecast p:first-child {
    color: #555;
}

.light #forecast p:last-child {
    color: #0077ff;
}

.light button {
    background-color: #0077ff;
    color: white;
}

